# shinmoe-energy-cone-claude

./: .gitignore  README.md  pyproject.toml  run_all.sh  run_real.sh  run_sweep.sh
configs/: multi-vents-N.yml  multi-vents-S.yml  rim-vents-N.yml  rim-vents-S.yml  rim-vents-real-N-tah10h.yml  rim-vents-real-N.yml  rim-vents-real-S-tah10h.yml  rim-vents-real-S.yml  test1.yml
notebooks/: Untitled.ipynb  run_energy_cone_from_yaml.ipynb  run_energy_cone_from_yaml.py  run_py.ipynb  run_py2.ipynb
notebooks_archive/: multi-vents-N_raycast.ipynb  multi-vents-S_raycast.ipynb  rim-vents-N_raycast-merge.ipynb  rim-vents-S_raycast-merge.ipynb  rim-vents-real-N_raycast-merge.ipynb  rim-vents-real-S_raycast-merge.ipynb
scripts/: run_energy_cone.py  sweep_mu.py
src/energy_cone/: __init__.py  cone.py  io_raster.py  pipeline.py  sampling.py  vents.py
tests/: test_cone_monotonic.py  test_sampling.py  test_sweep_mu.py  test_vents_shift.py
