[project]
name = "shinmoe-energy-cone"
version = "0.1.0"
description = "Energy cone model for Shinmoedake pyroclastic flow hazard assessment"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.2",
    "imageio>=2.37.2",
    "matplotlib>=3.10.8",
    "mercantile>=1.2.1",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "pyproj>=3.7.2",
    "pyyaml>=6.0",
    "rasterio>=1.5.0",
    "scipy>=1.17.1",
    "shapely>=2.1.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.5",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/energy_cone"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
